force-app/main/default/objects/Program_Grade_Level__c.object
<CustomObject>
    <label>Program Grade Level</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Grade Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Grade Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>