force-app/main/default/objects/Program_Grade_Level__c/fields/Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>Academic_Program__c</fullName>
    <label>Academic Program</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Grade Levels</relationshipLabel>
    <relationshipName>Program_Grade_Levels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>