force-app/main/default/objects/Program_Grade_Level__c/fields/ActivateWaitlist__c.field-meta.xml
<CustomField>
    <fullName>ActivateWaitlist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>marks when a waitlist has been activated for the program grade level</description>
    <label>Active Waitlist</label>
    <type>Checkbox</type>
</CustomField>