force-app/main/default/objects/Program_Grade_Level__c/fields/Active_Open_Application__c.field-meta.xml
<CustomField>
    <fullName>Active_Open_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>marks when an Open Application has been activated for the program grade level</description>
    <label>Active Open Application</label>
    <type>Checkbox</type>
</CustomField>