force-app/main/default/objects/Program_Grade_Level__c/fields/AutoPlacement_HomeExclude__c.field-meta.xml
<CustomField>
    <fullName>AutoPlacement_HomeExclude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoPlacement HomeExclude</label>
    <type>Checkbox</type>
</CustomField>