force-app/main/default/objects/Program_Grade_Level__c/fields/AutoPlacement_NoneExclude__c.field-meta.xml
<CustomField>
    <fullName>AutoPlacement_NoneExclude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoPlacement NoneExclude</label>
    <type>Checkbox</type>
</CustomField>