force-app/main/default/objects/Program_Grade_Level__c/fields/AutoPlacement_PrivateExclude__c.field-meta.xml
<CustomField>
    <fullName>AutoPlacement_PrivateExclude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoPlacement PrivateExclude</label>
    <type>Checkbox</type>
</CustomField>