force-app/main/default/objects/Program_Grade_Level__c/fields/AutoPlacement_PublicExclude__c.field-meta.xml
<CustomField>
    <fullName>AutoPlacement_PublicExclude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoPlacement PublicExclude</label>
    <type>Checkbox</type>
</CustomField>