force-app/main/default/objects/Program_Grade_Level__c/fields/AutoPlacement_Special_EdExclude__c.field-meta.xml
<CustomField>
    <fullName>AutoPlacement_Special_EdExclude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoPlacement Special EdExclude</label>
    <type>Checkbox</type>
</CustomField>