force-app/main/default/objects/Program_Grade_Level__c/fields/AutoplacementExclude__c.field-meta.xml
<CustomField>
    <fullName>AutoplacementExclude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoplacementExclude</label>
    <type>Checkbox</type>
</CustomField>