force-app/main/default/objects/Program_Grade_Level__c/fields/Document_Submission_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Submission_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Submission End Date</label>
    <type>DateTime</type>
</CustomField>