force-app/main/default/objects/Program_Grade_Level__c/fields/End_Open_Application__c.field-meta.xml
<CustomField>
    <fullName>End_Open_Application__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Open Application</label>
    <type>DateTime</type>
</CustomField>