force-app/main/default/objects/Program_Grade_Level__c/fields/EndWaitlist__c.field-meta.xml
<CustomField>
    <fullName>EndWaitlist__c</fullName>
    <description>date time the wait list ends for the program grade level</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Waitlist</label>
    <type>DateTime</type>
</CustomField>