force-app/main/default/objects/Program_Grade_Level__c/fields/Final_Confirmation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Confirmation_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Confirmation Start Date</label>
    <type>DateTime</type>
</CustomField>