force-app/main/default/objects/Program_Grade_Level__c/fields/FlagAcademicPerformanceEligibility__c.field-meta.xml
<CustomField>
    <fullName>FlagAcademicPerformanceEligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if Academic Performance Eligibility for a school config should be programmatically set.</description>
    <label>Flag Academic Performance Eligibility</label>
    <type>Checkbox</type>
</CustomField>