force-app/main/default/objects/Program_Grade_Level__c/fields/Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level__c</fullName>
    <label>Grade Level</label>
    <referenceTo>Grade_Level__c</referenceTo>
    <relationshipLabel>Program Grade Levels</relationshipLabel>
    <relationshipName>Program_Grade_Levels</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>