force-app/main/default/objects/Program_Grade_Level__c/fields/MinBirthdate__c.field-meta.xml
<CustomField>
    <fullName>MinBirthdate__c</fullName>
    <description>Birth date when a student becomes too youg to be eligible for Academic Program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Birthdate Min Cutoff</label>
    <type>Date</type>
</CustomField>