force-app/main/default/objects/Program_Grade_Level__c/fields/Other_Options_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Other_Options_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Options End Date</label>
    <type>Date</type>
</CustomField>