force-app/main/default/objects/Program_Grade_Level__c/fields/Push_to_Second_Semester_Date__c.field-meta.xml
<CustomField>
    <fullName>Push_to_Second_Semester_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Push to Second Semester Date</label>
    <type>DateTime</type>
</CustomField>