force-app/main/default/objects/Program_Grade_Level__c/fields/PushToSecondSemester__c.field-meta.xml
<CustomField>
    <fullName>PushToSecondSemester__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Push To Second Semester</label>
    <type>DateTime</type>
</CustomField>