force-app/main/default/objects/Program_Grade_Level__c/fields/Registration_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registration End Date</label>
    <type>DateTime</type>
</CustomField>