force-app/main/default/objects/Program_Grade_Level__c/fields/Registration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registration Start Date</label>
    <type>DateTime</type>
</CustomField>