force-app/main/default/objects/Program_Grade_Level__c/fields/Start_Open_Application__c.field-meta.xml
<CustomField>
    <fullName>Start_Open_Application__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Open Application Start Date</label>
    <type>DateTime</type>
</CustomField>