force-app/main/default/objects/Program_Grade_Level__c/fields/StartWaitlist__c.field-meta.xml
<CustomField>
    <fullName>StartWaitlist__c</fullName>
    <description>status of waitlist assignment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>date time the wait list begins for the program grade level</inlineHelpText>
    <label>Start Waitlist</label>
    <type>DateTime</type>
</CustomField>