force-app/main/default/objects/Program_Grade_Level__c/fields/Too_Old_Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Too_Old_Cutoff_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Too Old Cutoff Date</label>
    <type>Date</type>
</CustomField>