force-app/main/default/objects/Program_Grade_Level__c/fields/Too_Young_Cutoff__c.field-meta.xml
<CustomField>
    <fullName>Too_Young_Cutoff__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Too Young Cutoff</label>
    <type>Date</type>
</CustomField>