force-app/main/default/objects/Program_Grade_Level__c/fields/TooYoung_OtherOptions_End__c.field-meta.xml
<CustomField>
    <fullName>TooYoung_OtherOptions_End__c</fullName>
    <description>Birth date end date when a student becomes too young to be eligible for an Academic Program, but may have other options available</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Too Young Other Options End</label>
    <type>Date</type>
</CustomField>