force-app/main/default/objects/Program_Grade_Level__c/fields/TooYoung_OtherOptions_Start__c.field-meta.xml
<CustomField>
    <fullName>TooYoung_OtherOptions_Start__c</fullName>
    <description>Birth date start date when a student becomes too young to be eligible for an Academic Program, but may have other options available</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Too Young Other Options Start</label>
    <type>Date</type>
</CustomField>