force-app/main/default/objects/Program_Grade_Level__c/fields/Waitlist_Placement_Option_Config__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Placement_Option_Config__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waitlist Placement Option (Config)</label>
    <type>Checkbox</type>
</CustomField>