force-app/main/default/objects/Program_Grade_Level__c/listViews/All_PGL_w_Accounts.listView-meta.xml
<ListView>
    <fullName>All_PGL_w_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Academic_Program__c</columns>
    <filterScope>Everything</filterScope>
    <label>All PGL w/ Accounts</label>
</ListView>